# serverless-mailer

./: .gitignore  README.md  handler.py  package.json  pyproject.toml  requirements.txt  serverless.yml
